2005-11-10  David Hampton  <hampton@employees.org>

	* src/core-utils/gnc-gkeyfile-utils.[ch]:
	* src/app-utils/gnc-exp-parser.c: Add a GError parameter to the
	gnc_key_file_save_to_file() function.  Check for an error
	condition on every system call.

2005-11-09  Scott Oonk  <scott.oonk@gmail.com>

	* src/register/register-gnome/gnucash-item-edit.c: Draw cursor at
	correct x,y offset from GdkDrawable.  Will now correctly draw
	cursor on initial entry into a cell.

	* src/register/register-gnome/gnucash-item-edit.c: Fix some
	alignment problems in the register.

	It removes the pango_layout_set_alignment code.  Since we are
	rendering a single line of text, the layout is only as wide as the
	text.  Because of this, the alignment within the layout doesn't
	have any effect.

	Use the same x_offset logic regardless of how we enter the cell.

	Make sure x_offset gets reset when changing cells via the keyboard.
	
2005-11-09  David Hampton  <hampton@employees.org>

	* src/gnome-utils/gnc-tree-view-account.[ch]: Add a function that
	allow you to expand the account tree to show a specific account.

	* src/report/report-system/report.scm:
	* src/business/business-reports/business-reports.scm:
	* src/gnome-utils/ui/gnc-main-window-ui.xml:
	* src/gnome-utils/gnc-menu-extensions.[ch]:
	* src/gnome-utils/gnc-plugin-menu-additions.[ch]:
	* src/gnome/gnc-plugin-page-register.c:
	* src/gnome/ui/gnc-plugin-page-register-ui.xml: The register page
	should add to the existing list of items in the Report menu, not
	replace it.  Sort the items in the Reports menu, and add a couple
	of accelerators.

	* src/report/stylesheets/gnc-plugin-stylesheets.c: The "Edit
	Stylesheets" menu item should always be visible.

	* doc/README.dependencies: Document the devel packages needed to
	compile gnucash on FC4.

	* src/gnome-utils/gnc-embedded-window.c:
	* src/gnome-utils/gnc-menu-extensions.c:
	* src/gnome-utils/gnc-plugin-menu-additions.c:
	* src/gnome-utils/gnc-main-window.c: